# Parser-2.0

./: .gitignore  CI_CD_README.md  CMakeLists.txt  FUNCTION_SYSTEM_README.md  IMPROVEMENT_PLAN.md  LOGGING_IMPROVEMENTS.md  PLUGIN_DEVELOPMENT_GUIDE.md  PLUGIN_SYSTEM_SUMMARY.md  README_DYNAMIC_LOADING.md  SEPARATE_PROGRAMS_SUMMARY.md  TEST_RESULTS_SUMMARY.md  USAGE_GUIDE.md  arithmetic.txt  auto_commit.sh  demo_dependency_injection_initial_values.cpp  run_tests.py  simple_test.txt  test.cpp  test_abs_positive.txt  test_abs_simple.txt  test_and_only.txt  test_arithmetic.txt  test_arithmetic_add.txt  test_arithmetic_div.txt  test_arithmetic_mul_div.txt  test_arithmetic_simple.txt  test_arithmetic_sub.txt  test_assign_expression.txt  test_auto_cast.txt  test_auto_cast_advanced.txt  test_auto_cast_comprehensive.txt  test_auto_cast_simple.txt  test_basic_print.txt  test_bitwise_and.txt  test_bitwise_not.txt  test_bitwise_or.txt  test_bitwise_simple.txt  test_bitwise_xor.txt  test_bool.txt  test_bool_compare.txt  (+80 more)
Parser/: CMakeLists.txt  ast_optimizer.cpp  ast_optimizer.h  ast_visitor.h  control_flow.h  inter.cpp  inter.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  logger.cpp  main.cpp  parser.cpp  parser.h  value.h
fuzz/: CMakeLists.txt  README.md
fuzz/interpreter/: interpreter_fuzzer.cpp  lexer_fuzzer.cpp  minimal_fuzzer.cpp  parser_fuzzer.cpp
fuzz/scripts/: run_fuzzing.sh
plugins/: CMakeLists.txt  README.md  basic_builtin_plugin.cpp  extra_plugin.cpp  io_plugin.cpp  math_plugin_enhanced.cpp  type_plugin.cpp
plugins/array_plugin/: CMakeLists.txt  README.md  array_plugin.cpp
plugins/core_plugin/: CMakeLists.txt  README.md  basic_builtin_plugin.cpp
plugins/dynamic_library_plugin/: CMakeLists.txt  dynamic_library_loader.cpp  dynamic_library_loader.h  dynamic_library_plugin.cpp  dynamic_library_plugin.h
plugins/extra_plugin/: CMakeLists.txt  README.md  extra_plugin.cpp
plugins/io_plugin/: CMakeLists.txt  README.md  io_plugin.cpp
plugins/math_enhanced_plugin/: CMakeLists.txt  README.md  math_plugin_enhanced.cpp
plugins/math_plugin/: CMakeLists.txt  README.md  math_plugin.cpp
plugins/string_plugin/: CMakeLists.txt  README.md  string_plugin.cpp
plugins/type_plugin/: CMakeLists.txt  README.md  type_plugin.cpp
src/common/: CMakeLists.txt  function_signature_parser.cpp  logger.cpp  string_utils.cpp
src/compiler/: CMakeLists.txt  compiler_test.cpp  expression_converter.cpp  simple_test.cpp  ssa_converter.cpp  ssa_simple_test  ssa_simple_test.cpp  statement_converter.cpp  template_test.cpp
src/emulator/: CMakeLists.txt  emulator.cpp  main.cpp  mmio.cpp  vm_executor.cpp  vm_loader.cpp  vm_machine.cpp
src/interpreter/: CMakeLists.txt  builtin.cpp  builtin_types.cpp  calculate.cpp  expression.cpp  function.cpp  interpreter.cpp  logger.cpp  plugin_manager.cpp  scope.cpp  statement.cpp  type_converter.cpp  type_registry.cpp  value.cpp
src/interpreter/core/: access_handler.cpp  advanced_expression_visitor.cpp  async_runtime.cpp  calculate.cpp  concurrency.cpp  definition_visits.cpp  error_handler.cpp  expression.cpp  function_call.cpp  interpreter.cpp  memory_manager.cpp  pattern_matching.cpp  plugin.cpp  reflection.cpp  statement.cpp  thread_executor.cpp
src/interpreter/modules/: module_system.cpp
src/interpreter/plugins/: CMakeLists.txt  basic_builtin_plugin.cpp  dynamic_library_loader.cpp  dynamic_library_plugin.cpp  math_plugin.cpp  plugin_manager.cpp  string_plugin.cpp
src/interpreter/scope/: object_factory.cpp  object_registry.cpp  scope.cpp  scope_manager.cpp
src/interpreter/types/: array.cpp  builtin_types.cpp  builtin_types_old.cpp  builtin_types_simplified.cpp  class_type.cpp  container_type.cpp  dict.cpp  function_signature.cpp  generics.cpp  interface_type.cpp  interface_type_java_style.cpp  object_type.cpp  primitive_type.cpp  string.cpp  struct_type.cpp  type_converter.cpp  type_inference.cpp  type_registry.cpp
src/interpreter/utils/: logger.cpp  string_utils.cpp
src/interpreter/values/: calculate.cpp  container_values.cpp  function.cpp  method_reference.cpp  object_factory.cpp  object_registry.cpp  object_value.cpp  primitive_types.cpp  value.cpp
src/lexer/: CMakeLists.txt  lexer.cpp  token.cpp  value.cpp
src/optimizer/: CMakeLists.txt  ast_optimizer.cpp
src/parser/: CMakeLists.txt  definition.cpp  expression.cpp  function.cpp  inter.cpp  parser.cpp  scope.cpp  statement.cpp
src/plugins/: CMakeLists.txt  array_plugin.cpp  basic_builtin_plugin.cpp  extra_plugin.cpp  io_plugin.cpp  math_plugin.cpp  math_plugin_enhanced.cpp  string_plugin.cpp  type_plugin.cpp
src/tests/interpreter/: CMakeLists.txt  test_builtin_function.cpp  test_builtin_functions_as_identifiers.cpp  test_builtin_refactor.cpp  test_cast_expression.cpp  test_cast_operations.cpp  test_constant_expression.cpp  test_function_system.cpp  test_function_system_enhanced.cpp  test_function_type.cpp  test_interpreter.cpp  test_interpreter_comprehensive.cpp  test_interpreter_execution.cpp  test_interpreter_simple.cpp  test_operator_type.cpp  test_optimizer_comprehensive.cpp  test_parser_constant.cpp  test_plugin_system.cpp  test_registry.cpp  test_simple_interpreter.cpp  test_simplified_binary.cpp  test_simplified_expressions.cpp  test_user_functions.cpp  test_value_visitor.cpp  test_visitor.cpp
src/tests/lexer/: CMakeLists.txt  lexer_test.cpp  test_istream_lexer.cpp  test_lexer.cpp  test_lexer_comprehensive.cpp  test_merged_target_type.cpp  test_new_functions.cpp  test_operator_design.cpp  test_operator_type.cpp  test_simple_lexer.cpp  test_string_operations.cpp  test_value_variables.cpp
tests/lexer/: CMakeLists.txt  test_char_flyweight.cpp  test_istream_lexer.cpp  test_lexer.cpp  test_lexer_open.cpp  test_operator_design.cpp  test_string_operations.cpp
tests/main/: CMakeLists.txt  interpreter_main.cpp  lexer_main.cpp  main.cpp  parser_main.cpp
tests/optimizer/: CMakeLists.txt  test_optimizer.cpp  test_simple_optimizer.cpp
tools/auto_wrapper/: CMakeLists.txt  README.md  auto_wrapper.cpp  auto_wrapper.h  code_generator.cpp  json_parser.cpp  json_parser.h  main.cpp
(+457 files in other folders)
